Fix padding for form sidebar & gap for buttons

--- a/sign-up-form/style.css
+++ b/sign-up-form/style.css
@@ -52,6 +52,7 @@ div.form-sidebar {
   align-items: center;
   flex: 1 0 auto;
   background-color: rgb(249, 244, 245);
+  padding: 40px;
 }
 
 form#registration {
@@ -168,6 +169,7 @@ div.action {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 12px;
 }
 
 div.login {
